# UNetDarknetTorch

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  build_opencv.sh  grubcut.sh  run.bat  run.sh
include/UNet/: DarknetParser.hpp  TrainUnet2D.hpp  UNetDataset.hpp
model/: unet.cfg  unet1c1cl2l8f.cfg  unet1c1cl3l32f.cfg  unet1c1cl3l8f.cfg  unet3c2cl2l8f.cfg  unet_1_class.cfg  unet_1_class_1_color.cfg
src/: DarknetParser.cpp  UNetDataset.cpp  grubcut.cpp  main.cpp  train_unet2d.cpp
